--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -39,8 +39,29 @@
 // }
 
 @font-face {
-	font-family: "Helvetica Neue";
+	font-family: 'Helvetica Neue';
 	font-weight: 400;
-	src: url("../fonts/HelveticaNeueCyr-Roman.woff") format("woff"),
-	  url("../fonts/HelveticaNeueCyr-Roman.woff2") format("woff2");
+	src: url('../fonts/HelveticaNeueCyr-Roman.woff') format('woff'),
+		url('../fonts/HelveticaNeueCyr-Roman.woff2') format('woff2');
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../fonts/Montserrat-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Montserrat';
+	src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
 }
