--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -9,6 +9,60 @@
 		}
 	}
 
+	&-room {
+		height: 100%;
+	}
+
+	&__img-preview {
+		&-box {
+			width: 100%;
+			background-color: #fff;
+			padding: 1.2rem 3.2rem 0;
+			// padding-right: 0;
+			// overflow-x: scroll;
+		}
+		&-list {
+			display: flex;
+			gap: 0.4rem;
+		}
+		&-item {
+			width: 8.9rem;
+			height: 8.9rem;
+			position: relative;
+
+			&-img {
+				border-radius: 0.8rem;
+				overflow: hidden;
+				width: 8rem;
+				height: 8rem;
+				margin-top: 0.9rem;
+				margin-right: 0.9rem;
+
+				img {
+					width: 100%;
+					height: 100%;
+					-o-object-fit: cover;
+					object-fit: cover;
+				}
+			}
+
+			&-btn {
+				position: absolute;
+				top: 0;
+				right: 0;
+				width: 2.4rem;
+				height: 2.4rem;
+
+				svg {
+					width: 100%;
+					height: 100%;
+					-o-object-fit: cover;
+					object-fit: cover;
+				}
+			}
+		}
+	}
+
 	&__box-item {
 		@media (hover: hover) {
 			&:hover {
@@ -535,7 +589,7 @@
 			padding-right: 1.6rem;
 
 			& > div {
-				height: 44.9rem !important;
+				height: 100%;
 			}
 
 			&::-webkit-scrollbar {
@@ -727,13 +781,12 @@
 			margin-top: auto;
 			display: flex;
 			flex-direction: column;
-			padding: 2rem 3.2rem;
 			border-top: 0.1rem solid #f1f3f3;
 			margin-left: -3.2rem;
 			margin-right: -3.2rem;
+			position: relative;
 
 			@media (max-width: 48em) {
-				padding: 3.2rem 3.2rem 2rem;
 				border-top: 0.2rem solid #f1f3f3;
 			}
 
@@ -744,7 +797,8 @@
 					justify-content: space-between;
 					gap: 2rem;
 					align-items: center;
-
+					padding: 2rem 3.2rem;
+					
 					@media (max-width: 48em) {
 						gap: 3.2rem;
 					}
@@ -975,6 +1029,7 @@
 		overflow: hidden;
 		width: 30.2rem;
 		height: 22.4rem;
+		flex-wrap: wrap;
 
 		.message-time {
 			display: none;
