--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -13,6 +13,16 @@
 		height: 100%;
 	}
 
+	&__date {
+		width: 100%;
+		text-align: center;
+		font-weight: 600;
+		font-size: 1.6rem;
+		line-height: 150%;
+		color: #000000;
+		margin-bottom: 2.4rem;
+	}
+
 	&__img-preview {
 		&-box {
 			width: 100%;
@@ -798,7 +808,7 @@
 					gap: 2rem;
 					align-items: center;
 					padding: 2rem 3.2rem;
-					
+
 					@media (max-width: 48em) {
 						gap: 3.2rem;
 					}
