feat: creating room, use img

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1695,9 +1695,9 @@
         }
     }
 }
-body {
-    font-family: 'Montserrat'
-}
+// body {
+//     font-family: 'Montserrat'
+// }
 
 .btn {
     padding: 1.7rem 4rem;
