--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -310,6 +310,26 @@
 				border-radius: 1.6rem;
 				gap: 2.4rem;
 			}
+			&.active {
+				background-color: #1d7d4d;
+				color: #fff;
+
+				svg {
+					path {
+						stroke: #fff;
+					}
+				}
+
+				.chat__dialogs__message,
+				.chat__dialogs__time {
+					color: #fff;
+				}
+
+				.chat__dialogs__unread-messages {
+					background-color: #fff;
+					color: #298267;
+				}
+			}
 
 			&:hover {
 				background-color: #1d7d4d;
@@ -711,133 +731,155 @@
 				.message-time {
 					display: none;
 				}
+				.chat-container_img {
+					display: grid;
+				}
 				&[data-files="2"] {
-					grid-template-columns: repeat(2, 1fr);
+					.chat-container_img {
+						grid-template-columns: repeat(2, 1fr);
+					}
 				}
 				&[data-files="3"] {
-					grid-template-columns: repeat(2, 1fr);
-  					grid-template-rows: repeat(2, 1fr);
-
-					.chat__dialog__message__image-wrapper:nth-child(1) {
-						grid-row: auto / span 2;
+					.chat-container_img {
+						grid-template-columns: repeat(2, 1fr);
+						grid-template-rows: repeat(2, 1fr);
+  
+					  .chat__dialog__message__image-wrapper:nth-child(1) {
+						  grid-row: auto / span 2;
+					  }
 					}
+
 				}
 				&[data-files="4"] {
-					grid-template-columns: repeat(2, 1fr);
-  					grid-template-rows: repeat(2, 1fr);
+					.chat-container_img {
+						grid-template-columns: repeat(2, 1fr);
+						grid-template-rows: repeat(2, 1fr);
+					}
 				}
 				&[data-files="5"] {
-					grid-template-columns: repeat(6, 1fr);
-  					grid-template-rows: repeat(2, 1fr);
-					.chat__dialog__message__image-wrapper:nth-child(1) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(2) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(3) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(4) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(5) {
-						grid-column: auto / span 2;
+					.chat-container_img {
+						grid-template-columns: repeat(6, 1fr);
+						grid-template-rows: repeat(2, 1fr);
+						.chat__dialog__message__image-wrapper:nth-child(1) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(2) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(3) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(4) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(5) {
+							grid-column: auto / span 2;
+						}
 					}
 				}
 				&[data-files="6"] {
-					grid-template-columns: repeat(2, 1fr);
-  					grid-template-rows: repeat(3, 1fr);
+					.chat-container_img {
+						grid-template-columns: repeat(2, 1fr);
+						grid-template-rows: repeat(3, 1fr);
+					}
 				}
 				&[data-files="7"] {
-					grid-template-columns: repeat(6, 1fr);
-  					grid-template-rows: repeat(3, 1fr);
-					.chat__dialog__message__image-wrapper:nth-child(1) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(2) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(3) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(4) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(5) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(6) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(7) {
-						grid-column: auto / span 2;
+					.chat-container_img {
+						grid-template-columns: repeat(6, 1fr);
+						  grid-template-rows: repeat(3, 1fr);
+						.chat__dialog__message__image-wrapper:nth-child(1) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(2) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(3) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(4) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(5) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(6) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(7) {
+							grid-column: auto / span 2;
+						}
 					}
 				}
 				&[data-files="8"] {
-					grid-template-columns: repeat(6, 1fr);
-  					grid-template-rows: repeat(3, 1fr);
-					.chat__dialog__message__image-wrapper:nth-child(1) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(2) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(3) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(4) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(5) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(6) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(7) {
-						grid-column: auto / span 2;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(8) {
-						grid-column: auto / span 2;
+					.chat-container_img {
+						grid-template-columns: repeat(6, 1fr);
+						  grid-template-rows: repeat(3, 1fr);
+						.chat__dialog__message__image-wrapper:nth-child(1) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(2) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(3) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(4) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(5) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(6) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(7) {
+							grid-column: auto / span 2;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(8) {
+							grid-column: auto / span 2;
+						}
 					}
 				}
 				&[data-files="9"] {
-					grid-template-columns: repeat(3, 1fr);
-  					grid-template-rows: repeat(3, 1fr);
+					.chat-container_img {
+						grid-template-columns: repeat(3, 1fr);
+						grid-template-rows: repeat(3, 1fr);
+					}
 				}
-				&[data-files="8"] {
-					grid-template-columns: repeat(12, 1fr);
-  					grid-template-rows: repeat(3, 1fr);
-					.chat__dialog__message__image-wrapper:nth-child(1) {
-						grid-column: auto / span 4;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(2) {
-						grid-column: auto / span 4;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(3) {
-						grid-column: auto / span 4;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(4) {
-						grid-column: auto / span 4;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(5) {
-						grid-column: auto / span 4;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(6) {
-						grid-column: auto / span 4;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(7) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(8) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(9) {
-						grid-column: auto / span 3;
-					}
-					.chat__dialog__message__image-wrapper:nth-child(10) {
-						grid-column: auto / span 3;
+				&[data-files="10"] {
+					.chat-container_img {
+						grid-template-columns: repeat(12, 1fr);
+						grid-template-rows: repeat(3, 1fr);
+						.chat__dialog__message__image-wrapper:nth-child(1) {
+							grid-column: auto / span 4;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(2) {
+							grid-column: auto / span 4;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(3) {
+							grid-column: auto / span 4;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(4) {
+							grid-column: auto / span 4;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(5) {
+							grid-column: auto / span 4;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(6) {
+							grid-column: auto / span 4;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(7) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(8) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(9) {
+							grid-column: auto / span 3;
+						}
+						.chat__dialog__message__image-wrapper:nth-child(10) {
+							grid-column: auto / span 3;
+						}
 					}
 				}
 
@@ -1188,4 +1230,195 @@
 			}
 		}
 	}
+}
+
+.fancybox__container {
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+    width: 144rem;
+    // height: 102.4rem;
+    // width: 96vw;
+    height: 98vh;
+    border-radius: 1.6rem;
+    overflow: hidden !important;
+
+    @media (max-width: 48em) {
+        bottom: 0px !important;
+        top: 4rem !important;
+        left: 0px !important;
+        right: 0px !important;
+        width: 100% !important;
+        transform: unset !important;
+    }
+
+    .fancybox__backdrop {
+        background-color: #fff;
+
+        @media (max-width: 48em) {
+            top: 4rem !important;
+            border-radius: 4.8rem 4.8rem 0 0;
+        }
+    }
+
+    .fancybox__toolbar, .fancybox__toolbar.is-absolute{
+        position: absolute;
+        top: 1.6rem;
+        right: 4rem;
+        left: 4rem;
+
+        @media (max-width: 48em) {
+            top: 4.8rem;
+            left: 3.2rem;
+            right: 3.2rem;
+        }
+    }
+    
+    &.is-compact .fancybox__toolbar{
+        top: 4.8rem;
+        left: 3.2rem;
+        right: 3.2rem;
+    }
+
+    .fancybox__infobar {
+        display: none;
+        font-size: 3.2rem;
+        font-weight: 600;
+        line-height:  150%;
+        color: #031E16;
+        text-shadow: none;
+
+        @media (max-width: 48em) {
+            display: block;
+        }
+    }
+
+    .fancybox__nav {
+        .f-button {
+            border-radius: 100%;
+            overflow: hidden;
+            background-color: rgba(0, 0, 0, 0.3);
+            width: 3.2rem;
+            height: 3.2rem;
+
+            svg {
+                width: 1.6rem;
+                height: 2rem;
+                path {
+                    stroke: #fff;
+                }
+            }
+        }
+
+        .f-button.is-next {
+            right: 17rem !important;
+
+            @media (max-width: 48em) {
+                display: none;
+            }
+        }
+
+        .f-button.is-prev {
+            left: 17rem !important;
+
+            @media (max-width: 48em) {
+                display: none;
+            }
+        }
+    }
+
+    .fancybox__toolbar__column.is-right {
+        @media (max-width: 48em) {
+            opacity: 0;
+        }
+        .f-button {
+            border-radius: 100%;
+            overflow: hidden;
+            background-color: rgba(0, 0, 0, 0.3);
+            width: 3.2rem;
+            height: 3.2rem;
+
+            svg {
+                width: 2rem;
+                height: 2rem;
+                path {
+                    stroke: #fff;
+                }
+            }
+        }
+    }
+    .fancybox__toolbar__column.is-left {
+        opacity: 0;
+        @media (max-width: 48em) {
+            opacity: 1;
+        }
+        .f-button {
+            background-color: unset;
+            width: 4.8rem;
+            height: 4.8rem;
+
+            svg {
+                width: 4.8rem;
+                height: 4.8rem;
+            }
+        }
+    }
+
+    .fancybox__slide {
+        padding: 4rem;
+
+        @media (max-width: 48em) {
+            padding: 24.8rem 3.2rem 20rem;
+        }
+
+        .fancybox__content {
+            width: 113rem !important;
+            height: 83.2rem !important;
+            transform: unset !important;
+            background-color: #f1f3f3 !important;
+            border-radius: 1.6rem;
+            overflow: hidden;
+            img {
+                object-fit: contain;
+
+                @media (max-width: 48em) {
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+
+    .fancybox__footer {
+        .f-thumbs__slide {
+            margin-right: 1.2rem !important;
+        }
+
+        .f-thumbs__slide.for-image {
+            border-radius: 0.8rem;
+            overflow: hidden;
+            height: 8rem;
+            width: 11.8rem;
+
+            button {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        @media (max-width: 48em) {
+            display: none;
+        }
+    }
+}
+
+.fancybox-bg{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.492);
+    z-index: 1010;
+    backdrop-filter: blur(6px);
+    display: none;
 }
