--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -34,11 +34,22 @@
 		&-list {
 			display: flex;
 			gap: 0.4rem;
+
+			@media (max-width: 48em) {
+				gap: 0.8rem;
+				overflow: auto;
+			}
 		}
 		&-item {
 			width: 8.9rem;
 			height: 8.9rem;
 			position: relative;
+
+			@media (max-width: 48em) {
+				width: 13.8rem;
+				height: 13.8rem;
+				flex: none;
+			}
 
 			&-img {
 				border-radius: 0.8rem;
@@ -47,6 +58,11 @@
 				height: 8rem;
 				margin-top: 0.9rem;
 				margin-right: 0.9rem;
+
+				@media (max-width: 48em) {
+					width: 12rem;
+					height: 12rem;
+				}
 
 				img {
 					width: 100%;
@@ -62,6 +78,11 @@
 				right: 0;
 				width: 2.4rem;
 				height: 2.4rem;
+
+				@media (max-width: 48em) {
+					width: 3.6rem;
+					height: 3.6rem;
+				}
 
 				svg {
 					width: 100%;
@@ -482,7 +503,12 @@
 			bottom: 0;
 			width: 100%;
 			height: 100%;
-			padding: 4.8rem 3.2rem 13.2rem;
+			// padding: 4.8rem 3.2rem 13.2rem;
+			padding: 4.8rem 3.2rem 0rem;
+
+			&.active {
+				right: 0;
+			}
 		}
 
 		&-salutation {
@@ -617,6 +643,10 @@
 
 			margin-right: -1.6rem;
 			padding-right: 1.6rem;
+
+			@media (max-width: 48em) {
+				max-height: none;
+			}
 
 			& > div {
 				height: 100%;
@@ -1186,6 +1216,10 @@
 		width: 100%;
 		font-size: 1.6rem;
 		line-height: 150%;
+
+		@media (max-width: 48em) {
+			font-size: 3.2rem;
+		}
 	}
 	:where(.css-dev-only-do-not-override-1xg9z9n).ant-mentions-outlined {
 		background: unset;
