--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -1407,10 +1407,15 @@
         .fancybox__content {
             width: 113rem !important;
             height: 83.2rem !important;
-            transform: unset !important;
+            // transform: unset !important;
             background-color: #f1f3f3 !important;
             border-radius: 1.6rem;
             overflow: hidden;
+
+			@media (max-width: 48em) {
+				width: auto !important;
+				height: auto !important;
+			}
             img {
                 object-fit: contain;
 
