--- a/src/assets/scss/_chat.scss
+++ b/src/assets/scss/_chat.scss
@@ -503,7 +503,7 @@
 			bottom: 0;
 			width: 100%;
 			height: 100%;
-			padding: 4.8rem 3.2rem 13.2rem;
+			padding: 4.8rem 3.2rem;
 
 			&.active {
 				right: 0;
@@ -1010,15 +1010,26 @@
 
 			&__row {
 				&:last-child {
+					display: grid;
 					width: 100%;
-					display: flex;
+					// display: flex;
 					justify-content: space-between;
 					gap: 2rem;
 					align-items: center;
 					padding: 2rem 3.2rem;
+					grid-template-columns: auto 1fr auto;
+
+					&>div:nth-child(1) {
+						grid-column: 2;
+					}
+					&>div:nth-child(2) {
+						grid-column: 1;
+						grid-row: 1;
+					}
 
 					@media (max-width: 48em) {
 						gap: 3.2rem;
+						padding-bottom: 0;
 					}
 				}
 			}
@@ -1076,44 +1087,6 @@
 		&__btns {
 			display: flex;
 			gap: 2.4rem;
-
-			.btn--send,
-			.btn--add-photo {
-				width: 3.2rem;
-				height: 3.2rem;
-				cursor: pointer;
-
-				@media (max-width: 48em) {
-					width: 4.8rem;
-					height: 4.8rem;
-				}
-
-				svg {
-					width: 3.2rem;
-					height: 3.2rem;
-
-					@media (max-width: 48em) {
-						width: 4.8rem;
-						height: 4.8rem;
-					}
-
-					path {
-						transition: stroke 0.2s ease;
-					}
-				}
-
-				input {
-					display: none;
-				}
-
-				&:hover {
-					svg {
-						path {
-							stroke: #1d7d4d;
-						}
-					}
-				}
-			}
 		}
 
 		&__thumbnails-container {
@@ -1237,6 +1210,54 @@
 		).ant-mentions-outlined:focus-within {
 		box-shadow: unset;
 		outline: unset;
+	}
+	.btn--send,
+	.btn--add-photo {
+		width: 3.2rem;
+		height: 3.2rem;
+		cursor: pointer;
+
+		@media (max-width: 48em) {
+			width: 4.8rem;
+			height: 4.8rem;
+		}
+
+		svg {
+			width: 3.2rem;
+			height: 3.2rem;
+
+			@media (max-width: 48em) {
+				width: 4.8rem;
+				height: 4.8rem;
+			}
+
+			path {
+				transition: stroke 0.2s ease;
+			}
+		}
+
+		input {
+			display: none;
+		}
+
+		&:hover {
+			svg {
+				path {
+					stroke: #1d7d4d;
+				}
+			}
+		}
+	}
+	.btn--send {
+		opacity: 0;
+		pointer-events: none;
+		transition: opacity 0.5s;
+
+		&.active {
+			opacity: 1;
+			pointer-events: initial;
+
+		}
 	}
 }
 .ant-upload-list.ant-upload-list-text {
@@ -1465,3 +1486,38 @@
     backdrop-filter: blur(6px);
     display: none;
 }
+@media (max-width: 48em) {
+    // .ant-mentions.ant-mentions-focused ~ .btn--add-photo {
+    //     pointer-events: none;
+    // }
+	.ant-upload-wrapper {
+        pointer-events: none;
+	}
+}
+
+.chat__dialogs__support .chat__dialogs__item {
+    background: #F5FBF6;
+}
+.chat__dialogs__support .chat__dialogs__item:hover {
+    background: #1D7D4D;
+}
+
+
+// @media (max-width: 48em) {
+
+// 	.chat__dialogs__support.active_mob .chat__dialogs__item  {
+// 		background: #1D7D4D;
+// 		color: #FFF;
+// 	}
+// 	.chat__dialogs__support.active_mob .chat__dialogs__message,
+// 	.chat__dialogs__support.active_mob .chat__dialogs__time {
+// 		color: #FFF;
+// 	}
+// 	.chat__dialogs__support.active_mob .chat__dialogs__item svg path {
+// 		stroke: #fff;
+// 	}
+// 	.chat__dialogs__support.active_mob .chat__dialogs__item .chat__dialogs__unread-messages {
+// 		background-color: #fff;
+//     	color: #298267;
+// 	}
+// }
